Kubernetes/Roundcube/yamls/roundcube.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: roundcube
---
apiVersion: v1
kind: Service
metadata:
  name: roundcube
  namespace: roundcube
  labels:
    app: roundcube
spec:
  type: ClusterIP
  selector:
    app: roundcube
  ports:
  - name: http
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcube
  namespace: roundcube
  labels:
    app: roundcube
    app.kubernetes.io/name: roundcube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roundcube
  template:
    metadata:
      labels:
        app: roundcube
        app.kubernetes.io/name: roundcube
    spec:
      containers:
        - name: roundcube
          image: roundcube/roundcubemail:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-roundcube-https-redirect
  namespace: roundcube
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-roundcube-security
  namespace: roundcube
spec:
  headers:
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-roundcube-websecure
  namespace: roundcube 
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`webmail.domain.com`)
      services:
        - name: roundcube
          port: 80
          serversTransport: traefik-roundcube-transport
      middlewares:
        - name: traefik-roundcube-security
  tls:
    secretName: webmail-domain-com
    options:
      name: traefik-roundcube-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-roundcube-web
  namespace: roundcube
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`webmail.domain.com`)
      services:
        - name: roundcube
          port: 80
      middlewares:
        - name: traefik-roundcube-https-redirect
